# LibreSprite

./: .gitattributes  .gitignore  .gitmodules  .snapcraft.yaml  .travis.yml  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_es.md  CONTRIBUTING.md  CONTRIBUTING_es.md  CONTRIBUTORS.md  F0RT-DEV.txt  Fernando.txt  INSTALL.md  INSTALL_es.md  ISSUE_TEMPLATE.md  Joaomarcostx.txt  LICENSE_es.txt  Makefile  README.md  README_es.md  SCRIPTING.md  SECURITY.md  Theming.md  Valentiny.txt  andrensaraiva.txt  arthurribeiroborges.txt  build_libresprite_macos.sh  gabriel.txt  ikkisal.txt  joaovfrancisco.txt  opedrogabriel.txt  otiagobispo.txt  package_linux.sh  package_win.js  package_win.sh  yFrosttty.txt
desktop/: CMakeLists.txt  Info.plist  README.md  aseprite.appdata.xml  io.github.libresprite.libresprite.metainfo.xml  libresprite-thumbnailer  libresprite.appdata.xml  libresprite.desktop
desktop/gnome/: libresprite.thumbnailer
desktop/kde/: CMakeLists.txt  aseprite_thumb_creator.h  librespritethumbnail.desktop
emscripten/: CMakeLists.txt  README.md  index.html
src/: CMakeLists.txt  README.md  config.h  config.h.gch  git_watcher.cmake
src/allegro/: CMakeLists.txt
src/app/: CMakeLists.txt  README.md  app.cpp  app.h  app_brushes.cpp  app_brushes.h  app_menus.cpp  app_menus.h  app_options.cpp  app_options.h  app_render.h  brush_slot.h  cmd.h  cmd_sequence.h  cmd_transaction.h  color.h  color_picker.cpp  color_picker.h  color_target.h  color_utils.h  console.cpp  console.h  context.h  context_access.h  context_flags.cpp  context_flags.h  document.cpp  document.h  document_access.h  document_api.cpp  document_api.h  document_api_tests.cpp  document_exporter.cpp  document_exporter.h  document_range.h  document_range_ops.h  document_range_tests.cpp  document_undo.h  document_undo_observer.h  extra_cel.cpp  (+54 more)
src/app/cmd/: README.md  add_cel.cpp  add_cel.h  add_frame.cpp  add_frame.h  add_frame_tag.h  add_layer.h  add_palette.cpp  add_palette.h  background_from_layer.cpp  background_from_layer.h  clear_cel.cpp  clear_cel.h  clear_image.h  clear_mask.cpp  clear_mask.h  clear_rect.cpp  clear_rect.h  configure_background.h  copy_cel.cpp  copy_cel.h  copy_frame.h  copy_rect.cpp  copy_rect.h  copy_region.h  crop_cel.cpp  crop_cel.h  deselect_mask.cpp  deselect_mask.h  flatten_layers.cpp  flatten_layers.h  flip_image.h  flip_mask.h  flip_masked_cel.cpp  flip_masked_cel.h  layer_from_background.h  move_cel.cpp  move_cel.h  move_layer.h  patch_cel.cpp  (+56 more)
src/app/commands/: README.md  cmd_about.cpp  cmd_add_color.cpp  cmd_alternate_timeline.cpp  cmd_alternate_toolbar.cpp  cmd_alternate_touchbar.cpp  cmd_canvas_size.cpp  cmd_exit.cpp  (+63 more)
src/base/: 24bits.h  CMakeLists.txt  README.md  alive.h  base.h  base64.h  bind.h  buffer.h  cfile.h  chrono.cpp  chrono.h  chrono_unix.h  chrono_win32.h  clamp.h  concurrent_queue.h  config.h.cmakein  connection.h  convert_to.cpp  convert_to.h  debug.cpp  debug.h  disable_copying.h  dll.h  dll_unix.h  dll_win32.h  errno_string.h  exception.cpp  exception.h  file_handle.cpp  file_handle.h  fs.h  fs_osx.mm  fs_unix.h  fs_win32.h  fstream_path.h  injection.h  ints.h  iterator.h  launcher.cpp  launcher.h  (+43 more)
src/cfg/: README.md  cfg.cpp  cfg.h
src/clip/: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  clip_common.h  clip_osx.mm  clip_win.cpp  clip_x11.cpp
src/css/: README.md  compound_style.h  css.h  map.h  query.h  rule.h  sheet.h  state.h  stateful_style.h  style.h  value.h
src/doc/: CMakeLists.txt  README.md  algo.cpp  algo.h  anidir.h  blend_funcs.cpp  blend_funcs.h  blend_internals.h  blend_mode.h  brush.cpp  brush.h  brush_pattern.h  brush_type.h  brushes.h  cel.cpp  cel.h  cel_data.cpp  cel_data.h  cel_data_io.cpp  cel_data_io.h  cel_io.cpp  cel_io.h  cel_list.h  cels_range.h  color.h  color_mode.h  color_scales.h  compressed_image.cpp  compressed_image.h  context.h  context_observer.h  conversion_she.cpp  conversion_she.h  dithering_method.h  doc.h  document.h  document_event.h  document_observer.h  documents.cpp  documents.h  (+62 more)
src/filters/: README.md  color_curve.h  color_curve_filter.h  convolution_matrix.h  convolution_matrix_filter.cpp  convolution_matrix_filter.h  filter.h  filter_indexed_data.h  filter_manager.h  invert_color_filter.h  median_filter.h  neighboring_pixels.h  replace_color_filter.h  target.h  tiled_mode.h
src/fixmath/: README.md  fixmath.h
src/ft/: README.md  face.h  freetype_headers.h  lib.h
src/gfx/: README.md  border.h  clip.h  color.h  fwd.h  hsv.h  packing_rects.h  point.h  rect.h  rect_io.h  region.h  rgb.h  size.h
src/iff/: README.md
src/main/: README.md  main.cpp  resources_win32.rc
src/net/: CMakeLists.txt  README.md  http_request.cpp  http_request.h  http_request_null.cpp  http_request_wasm.cpp
src/render/: README.md  color_histogram.h  extra_type.h  get_sprite_pixel.cpp  get_sprite_pixel.h  median_cut.h  onionskin_position.h  ordered_dither.h  quantization.cpp  quantization.h  render.cpp  render.h  render_tests.cpp  zoom.h
src/script/: CMakeLists.txt  README.md  cout_delegate.cpp  engine.cpp  engine.h  engine_delegate.h  function.h  script_object.h  value.h
src/she/: CMakeLists.txt  README.md  capabilities.h  display.h  error.h  event.h  event_queue.h  font.h  keys.h  logger.h  native_cursor.h  native_dialogs.h  pointer_type.h  scoped_handle.h  she.h  surface.h  surface_format.h  system.h
src/steam/: README.md
src/tests/: README.md  test.h
src/ui/: CMakeLists.txt  README.md  accelerator.cpp  accelerator.h  accelerator_ui_tests.cpp  alert.cpp  alert.h  base.h  box.cpp  box.h  button.cpp  button.h  close_event.h  combobox.cpp  combobox.h  cursor.h  cursor_type.h  custom_label.h  entry.cpp  entry.h  event.cpp  event.h  graphics.cpp  graphics.h  grid.cpp  grid.h  hit_test_event.h  image_view.cpp  image_view.h  init_theme_event.h  int_entry.cpp  int_entry.h  intern.cpp  intern.h  keys.h  label.cpp  label.h  layout_io.h  link_label.h  listbox.cpp  (+60 more)
src/undo/: .travis.yml  CMakeLists.txt  README.md  undo_command.h  undo_history.cpp  undo_history.h  undo_state.h
src/wacom/: README.md
(+567 files in other folders)
